fix: collapse skin tone picker on blur (#17)
fixes #16

--- a/src/picker/styles/global.scss
+++ b/src/picker/styles/global.scss
@@ -50,3 +50,7 @@
 .no-pointer {
   pointer-events: none;
 }
+
+.cursor-pointer {
+  cursor: pointer;
+}
